# flake8-kwargs-spaces

./: .flake8  pyproject.toml
flake8_spaces_kwarg_equals/: _main.py
