[tool.poetry]
name = "flake8-plugin-kwargs-spaces"
version = "0.1.1"
description = "Custom flake8 plugin to check spaces around keyword argument equals signs."
authors = ["Denes Turei <turei.denes@gmail.com>"]
packages = [
    { include = "flake8_spaces_kwarg_equals" }
]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."flake8.extension"]
"CE1" = "flake8_spaces_kwarg_equals:get_no_space_around_equals_checker"

[tool.flake8]
extend-select = ["CE101"]
ignore = ["D200", "D202", "D401", "D105", "W503", "W504", "E731", "E131", "E251"]
per-file-ignores = [
    "*/__init__.py:F401,F403"
]
max-line-length = 80
count = true
exclude = [
    ".git",
    "__pycache__",
    "build",
    "docs/_build",
    "dist"
]
